feat(security): complete all audit security fixes
- add secrecy crate for proper secret handling
- migrate oidcconfig::client_secret to SecretString
- migrate noise_private_key to Zeroizing<Vec<u8>>
- add custom Debug for DatabaseConfig that redacts password
- implement preauthkeyToken newtype for tskey-auth format validation
- add deleted_at checks to preauth_key and api_key update ops
- add json deserialisation logging for node entity fields
- update AUDIT.md to mark all items complete

--- a/crates/railscale-types/Cargo.toml
+++ b/crates/railscale-types/Cargo.toml
@@ -12,6 +12,7 @@ thiserror = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
 email_address = { workspace = true }
+secrecy = { workspace = true }
 base64 = "0.22"
 hex = "0.4"
 rand = "0.9"
