--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,9 @@ openidconnect = "4"
 # Caching
 moka = { version = "0.12", features = ["sync"] }
 
+# Secret handling
+secrecy = { version = "0.10", features = ["serde"] }
+
 # Internal crates
 railscale-types = { path = "crates/railscale-types" }
 railscale-db = { path = "crates/railscale-db" }
